--- a/style.css
+++ b/style.css
@@ -7,3 +7,136 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* shared styles */
+.display-flex{
+    display: flex;
+}
+
+/* dark-1 */
+.dark-1{
+    color: #131313;
+}
+/* dark-2 */
+.text-gray{
+    color: #424242;
+}
+/* dark-3 */
+.text-light-gray{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    color: ;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+.banner-contant{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.banner-description{
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.primary-btn{
+    background-color: #FF900E;
+    font-weight: 600;
+    font-size: 1.25rem;
+    color: #FFFFFF;
+    padding: 20px 25px;
+    border: none;
+    border-radius: 8px;
+}
+
+.banner-image{
+    width: 100%;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+#quick-list{
+    font-weight: 500;
+    font-size: 2.8rem;
+}
+
+#of-our{
+    font-weight: 700;
+    font-size: 2.8rem;
+}
+
+#features{
+    color: #FF900E;
+    font-weight: 700;
+    font-size: 2.8rem;
+}
+
+.feature-description{
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+
+/* resonsive */
+
+@media screen and (max-width: 576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+}
