added final projects

--- a/style.css
+++ b/style.css
@@ -189,10 +189,66 @@ main > section{
 .sponsors img{
     filter: grayscale(100%);
 }
+
+.features{
+    display: flex;
+    gap: 145px;
+}
+.features-heading{
+    color: #131313;
+    font-weight: 700;
+    font-size: 2.8rem;
+    border-left: 5px solid #FF900E;
+    padding-left: 21px;
+}
+
+.features-description{
+    color: #727272;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.features-sub-heading{
+    color: #131313;
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0;
+}
+
+.features-sub-description{
+    color: #727272;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.features-sub-section{
+    color: #FFFFFF;
+    border: none;
+    border-radius: 8px;
+    padding: 30px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.06);
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.features-img img{
+    width: 100%;
+}
+
 /* resonsive */
 
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links, .teams{
+    .navbar, .nav-links, .teams, .features{
         flex-direction: column;
     }
     .team-img-container, .facts-container, .our-sponsors-image{
@@ -205,12 +261,17 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top: 0;
+        margin-left: 0;
+        padding: 25px;
+    }
 }
 
 /* mediam */
 
 @media screen and (min-width:576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -224,5 +285,10 @@ main > section{
         grid-template-columns: repeat(2, 1fr);
         gap: 24px;
         justify-items: center;
+    }
+    #experience-badge{
+        margin-top: 0;
+        margin-left: 0;
+        padding: 25px;
     }
 }
